--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "./.build/handler.js",
   "scripts": {
-    "start": "tsc & npx functions-framework --target=http"
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "npx functions-framework --target=http"
   },
   "author": "serverless.com",
   "license": "MIT",
@@ -17,6 +19,8 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "2.1.0",
+    "discord.js": "14.14.1",
+    "dotenv": "16.3.1",
     "googleapis": "105.0.0"
   }
 }
