--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,14 @@
 {
-	
-    "compilerOptions": {
-      
-      "preserveConstEnums": true,
-      
-      "strictNullChecks": true,
-      
-      "sourceMap": true,
-      
-      "allowJs": true,
-      
-      "target": "es5",
-      
-      "outDir": ".build",
-      
-      "moduleResolution": "node",
-      
-      "lib": ["es2015"],
-      
-      "rootDir": "./src"
-    }
+  "compilerOptions": {
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "target": "es2020",
+    "outDir": ".build",
+    "moduleResolution": "node",
+    "lib": ["es2020", "esnext"],
+    "rootDir": "./src",
+    "module": "commonjs"
   }
+}
