--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -1,1 +1,6 @@
-GOOGLE_SHEETS_SPREADSHEET_ID: "1_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+GOOGLE_PRIVATE_KEY: XXXXXXXXXXXXX
+GOOGLE_CLIENT_EMAIL: XXXXXXXXXXXXX@appspot.gserviceaccount.com
+GOOGLE_SHEETS_ID:1_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+DISCORD_SERVER_ID: XXXXXXXXXXXXX
+DISCORD_BOT_TOKEN: XXXXXXXXXXXXXXXXXXXXX
