--- a/serverless.yml
+++ b/serverless.yml
@@ -1,12 +1,19 @@
 service: role-bot-serverless
+useDotenv: true
 
 provider:
   name: google
   stage: dev
-  runtime: nodejs20
-  region: us-west1
+  runtime: nodejs16
+  region: us-west2
   project: gdsc-role-bot
   credentials: ./credentials.json
+  environment:
+    GOOGLE_PRIVATE_KEY: ${env:GOOGLE_PRIVATE_KEY}
+    GOOGLE_CLIENT_EMAIL: ${env:GOOGLE_CLIENT_EMAIL}
+    GOOGLE_SHEETS_ID: ${env:GOOGLE_SHEETS_ID}
+    DISCORD_SERVER_ID: ${env:DISCORD_SERVER_ID}
+    DISCORD_BOT_TOKEN: ${env:DISCORD_BOT_TOKEN}
 
 frameworkVersion: "3"
 
