--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": ".build",
     "moduleResolution": "node",
     "lib": ["es2020", "esnext"],
-    "rootDir": "./src",
+    "rootDir": ".",
     "module": "commonjs"
   }
 }
